--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://chaturbate.com/in/?track=embed&tour=J2in&campaign=InDGn&signup_notice=1&disable_sound=1&mobileRedirect=never" height="480px" width="850px" frameborder="0" class="code" scrolling="no"></iframe>
+<iframe src="https://chaturbate.global/in/?track=embed&tour=J2in&campaign=InDGn&signup_notice=1&disable_sound=1&mobileRedirect=never" height="480px" width="850px" frameborder="0" class="code" scrolling="no"></iframe>
