--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <input /><button>search</button><br>
 <iframe src="https://chaturbate.com/in/?track=embed&tour=7Rae&campaign=InDGn&signup_notice=1&b=magic_elf&disable_sound=1&mobileRedirect=never" height="480px" width="850px" frameborder="0" class="code" scrolling="no"></iframe>
 <script>
-alert("workinx")
 const input=document.querySelector("input")
 const button=document.querySelector("button")
+const frame=document.quesrySelector("iframe")
 
 button.addEventListener("click", ()=>{
-alert(input.value)
+const src=iframe.src
+alert(src.replace(/&b=(.)*&$/,""))
 })
 </script>
