--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <input /><button>search</button><br>
  <input /><button>search</button><br>
- <iframe src="https://chaturbate.com/in/?track=embed&tour=7Rae&campaign=InDGn&signup_notice=1&b=magic_elf&disable_sound=1&mobileRedirect=never" height="480px" width="850px" frameborder="0" class="code" scrolling="no"></iframe>
+ <iframe src="https://chaturbate.global/in/?track=embed&tour=7Rae&campaign=InDGn&signup_notice=1&b=magic_elf&disable_sound=1&mobileRedirect=never" height="480px" width="850px" frameborder="0" class="code" scrolling="no"></iframe>
   <script>
     const input = document.querySelector("input")
     const button = document.querySelector("button")
