--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 let btn =document.querySelector("#button")
 
 btn.addEventListener("click",()=>{
-const q=document.getElementById("search").value
+const q=document.getElementById("search").value.toLowercase()
 document.querySelector("iframe").src="https://cht.xxx/affiliates/in/?tour=9oGW&campaign=nna9W&track=TFC_livechatroom&room="+q+"&disable_sound=0&embed_video_only=0"
 alert(document.querySelector("iframe").src)
 })
