--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
   <title></title>
   </head>
   <body>
-<input type="text" id="search" /><button id="button">search</button>
+<input type="text" id="search" /><button type="submit" id="button">search</button>
 <iframe src="https://cht.xxx/affiliates/in/?tour=9oGW&campaign=nna9W&track=TFC_livechatroom&room=allisonpalmer&disable_sound=0&embed_video_only=0" height=600 width=1000></iframe>
 <script type="text/javascript">
 let btn =document.querySelector("#button")
 
 btn.addEventListener("click",()=>{
-const q=document.getElementById("search").value.toLowercase()
+const q=document.getElementById("search").value.toLowerCase()
 document.querySelector("iframe").src="https://cht.xxx/affiliates/in/?tour=9oGW&campaign=nna9W&track=TFC_livechatroom&room="+q+"&disable_sound=0&embed_video_only=0"
-alert(document.querySelector("iframe").src)
 })
 
 </script>
