--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title></title>
   </head>
   <body>
-<input type="text" id="search" /><button type="submit" id="button">search</button>
+<form action="#">
+<input type="text" id="search" /><button type="submit" id="button">search</button></form>
 <iframe src="https://cht.xxx/affiliates/in/?tour=9oGW&campaign=nna9W&track=TFC_livechatroom&room=allisonpalmer&disable_sound=0&embed_video_only=0" height=600 width=1000></iframe>
 <script type="text/javascript">
 let btn =document.querySelector("#button")
