--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 let btn =document.querySelector("#button")
 
 btn.addEventListener("click",()=>{
+
 const q=document.getElementById("search").value.toLowerCase()
 document.querySelector("iframe").src="https://cht.xxx/affiliates/in/?tour=9oGW&campaign=nna9W&track=TFC_livechatroom&room="+q+"&disable_sound=0&embed_video_only=0"
+document.getElementById("search").setAttribute({value:"",placeholder:q})
 })
 
 </script>
