--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <iframe src="https://cht.xxx/affiliates/in/?tour=9oGW&campaign=nna9W&track=TFC_livechatroom&room=allisonpalmer&disable_sound=0&embed_video_only=0" height=600 width=1000></iframe>
 <script type="text/javascript">
 let btn =document.querySelector("#button")
+let q=document.getElementById("search")
 
 btn.addEventListener("click",()=>{
-
-const q=document.getElementById("search").value.toLowerCase()
-document.querySelector("iframe").src="https://cht.xxx/affiliates/in/?tour=9oGW&campaign=nna9W&track=TFC_livechatroom&room="+q+"&disable_sound=0&embed_video_only=0"
-document.getElementById("search").setAttribute({value:"",placeholder:q})
+document.querySelector("iframe").src="https://cht.xxx/affiliates/in/?tour=9oGW&campaign=nna9W&track=TFC_livechatroom&room="+q.value.trim().toLowerCase()+"&disable_sound=0&embed_video_only=0"
+q.setAttribute("value","")
+q.setAttribute("placeholder",q.value.trim().toLowerCase())
 })
 
 </script>
