--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ btn.addEventListener("click",()=>{
 document.querySelector("iframe").src="https://cht.xxx/affiliates/in/?tour=9oGW&campaign=nna9W&track=TFC_livechatroom&room="+q.value.trim().toLowerCase()+"&disable_sound=0&embed_video_only=0"
 q.setAttribute("value","")
 q.setAttribute("placeholder",q.value.trim().toLowerCase())
+alert(document.getElementById("search"))
 })
 
 </script>
