--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ let value=q.value.trim().toLowerCase()
 if(!value)
 value=q.placeholder
 document.querySelector("iframe").src="https://cht.xxx/affiliates/in/?tour=9oGW&campaign=nna9W&track=TFC_livechatroom&room="+value+"&disable_sound=0&embed_video_only=0"
-q.placeholder=q.value.trim().toLowerCase()
-localStorage.setItem("name",q.placeholder)
+q.placeholder=value
+localStorage.setItem("name",value)
 q.value=""
 q.blur()
 
