--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title></title>
   </head>
   <body>
-<form action="#">
+<form>
 <input type="text" id="search" placeholder="allisonpalmer"/><button type="submit" id="button">search</button></form>
-<iframe src="https://cht.xxx/affiliates/in/?tour=9oGW&campaign=nna9W&track=TFC_livechatroom&room=allisonpalmer&disable_sound=0&embed_video_only=0" height=600 width=1000></iframe>
+<iframe src="https://www.cht.xxx/embed/magic_elf/?join_overlay=1&campaign=nna9W&embed_video_only=0&disable_sound=0&tour=9oGW&room=allisonpalmer" height=600 width=1000></iframe>
 <script type="text/javascript" defer>
 
 () => {
@@ -23,7 +23,7 @@ const q=document.getElementById("search")
 btn.addEventListener("click",(e)=>{
   e.preventDefault()
 let value=q.value.trim().toLowerCase()
-window.location.replace("https://alexmercer0.github.io/chat?room=" + value)
+window.location.href("https://alexmercer0.github.io/chat?room=" + value)
 })
 
 
