--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 () => {
 const url = new Url(window.location.href)
-const { room } = new URLSearchParams(url.search)
-document.querySelector("iframe").src = "https://www.cht.xxx/embed/" + room +"/?join_overlay=1&campaign=nna9W&embed_video_only=0&disable_sound=0&tour=9oGW&room=allisonpalmer"
+const params = new URLSearchParams(url.search)
+document.querySelector("iframe").src = "https://www.cht.xxx/embed/" + params.get('room') +"/?join_overlay=1&campaign=nna9W&embed_video_only=0&disable_sound=0&tour=9oGW&room=allisonpalmer"
 }()
 
 let btn =document.querySelector("#button")
