--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 () => {
 const url = new Url(window.location.href)
 const params = new URLSearchParams(url.search)
+console.log(params)
 document.querySelector("iframe").src = "https://www.cht.xxx/embed/" + params.get('room') +"/?join_overlay=1&campaign=nna9W&embed_video_only=0&disable_sound=0&tour=9oGW&room=allisonpalmer"
 }()
 
@@ -23,7 +24,7 @@ const q=document.getElementById("search")
 btn.addEventListener("click",(e)=>{
   e.preventDefault()
 let value=q.value.trim().toLowerCase()
-window.location.href("https://alexmercer0.github.io/chat?room=" + value)
+window.location.href = "https://alexmercer0.github.io/chat?room=" + value
 })
 
 
