--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ const q=document.getElementById("search")
 btn.addEventListener("click",(e)=>{
   e.preventDefault()
 let value=q.value.trim().toLowerCase()
-window.location.href = "https://alexmercer0.github.io/chat?room=" + value
+window.location.href = "https://alexmercer0.github.io/chat/?room=" + value
 })
 
 
