--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <iframe src="https://www.cht.xxx/embed/magic_elf/?join_overlay=1&campaign=nna9W&embed_video_only=0&disable_sound=0&tour=9oGW&room=allisonpalmer" height=600 width=1000></iframe>
 <script type="text/javascript" defer>
 
-() => {
+window.onload = () => {
 const url = new Url(window.location.href)
 const params = new URLSearchParams(url.search)
 console.log(params)
 document.querySelector("iframe").src = "https://www.cht.xxx/embed/" + params.get('room') +"/?join_overlay=1&campaign=nna9W&embed_video_only=0&disable_sound=0&tour=9oGW&room=allisonpalmer"
-}()
+}
 
 let btn =document.querySelector("#button")
 const q=document.getElementById("search")
@@ -24,6 +24,7 @@ const q=document.getElementById("search")
 btn.addEventListener("click",(e)=>{
   e.preventDefault()
 let value=q.value.trim().toLowerCase()
+console.log(value)
 window.location.href = "https://alexmercer0.github.io/chat/?room=" + value
 })
 
