--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 <script type="text/javascript">
 
 window.addEventListener('DOMContentLoaded', () => {
-const url = new Url(window.location.href)
+const url = new URL(window.location.href)
 const params = new URLSearchParams(url.search)
-console.log(params)
 document.querySelector("iframe").src = "https://www.cht.xxx/embed/" + params.get('room') +"/?join_overlay=1&campaign=nna9W&embed_video_only=0&disable_sound=0&tour=9oGW&room=allisonpalmer"
 
 }); 
