--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
 <form>
 <input type="text" id="search" placeholder="allisonpalmer"/><button type="submit" id="button">search</button></form>
-<iframe sandbox="allow-scripts" src="https://www.cht.xxx/embed/magic_elf/?join_overlay=1&campaign=nna9W&embed_video_only=0&disable_sound=0&tour=9oGW&room=allisonpalmer" height=600 width=1000></iframe>
+<iframe sandbox="allow-scripts allow-same-origin" src="https://www.cht.xxx/embed/magic_elf/?join_overlay=1&campaign=nna9W&embed_video_only=0&disable_sound=0&tour=9oGW&room=allisonpalmer" height=600 width=1000></iframe>
 <script type="text/javascript">
 
 window.addEventListener('DOMContentLoaded', () => {
