--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
 <iframe sandbox="allow-scripts allow-same-origin" src="https://www.cht.xxx/embed/magic_elf/?join_overlay=1&campaign=nna9W&embed_video_only=0&disable_sound=0&tour=9oGW&room=allisonpalmer" height=600 width=1000></iframe>
 <script type="text/javascript">
 
+const btn =document.querySelector("#button")
+const q=document.getElementById("search") 
+  
 window.addEventListener('DOMContentLoaded', () => {
 const url = new URL(window.location.href)
 const params = new URLSearchParams(url.search)
 document.querySelector("iframe").src = "https://www.cht.xxx/embed/" + params.get('room') +"/?join_overlay=1&campaign=nna9W&embed_video_only=0&disable_sound=0&tour=9oGW&room=allisonpalmer"
-
+btn.setAttribute('placeholder',params.get('room'))
 }); 
 
 
-let btn =document.querySelector("#button")
-const q=document.getElementById("search")
+
 
 btn.addEventListener("click",(e)=>{
   e.preventDefault()
