--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 <form>
-<input type="text" id="search" placeholder="allisonpalmer"/><button type="submit" id="button">search</button></form>
+<input type="text" id="search" placeholder=""/><button type="submit" id="button">search</button></form>
 <iframe sandbox="allow-scripts allow-same-origin" src="https://www.cht.xxx/embed/magic_elf/?join_overlay=1&campaign=nna9W&embed_video_only=0&disable_sound=0&tour=9oGW&room=allisonpalmer" height=600 width=1000></iframe>
 <script type="text/javascript">
 
@@ -18,7 +18,7 @@ window.addEventListener('DOMContentLoaded', () => {
 const url = new URL(window.location.href)
 const params = new URLSearchParams(url.search)
 document.querySelector("iframe").src = "https://www.cht.xxx/embed/" + params.get('room') +"/?join_overlay=1&campaign=nna9W&embed_video_only=0&disable_sound=0&tour=9oGW&room=allisonpalmer"
-btn.setAttribute('placeholder',params.get('room'))
+q.setAttribute('placeholder',params.get('room'))
 }); 
 
 
