--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@ const btn =document.querySelector("#button")
 const q=document.getElementById("search") 
   
 window.addEventListener('DOMContentLoaded', () => {
-const url = new URL(window.location.href)
-const params = new URLSearchParams(url.search)
-document.querySelector("iframe").src = "https://www.cht.xxx/embed/" + params.get('room') +"/?join_overlay=1&campaign=nna9W&embed_video_only=0&disable_sound=0&tour=9oGW&room=allisonpalmer"
-q.setAttribute('placeholder',params.get('room'))
+const url = window.location.href.split("/")
+const room = url[url.length - 1]
+document.querySelector("iframe").src = "https://www.cht.xxx/embed/" + room +"/?join_overlay=1&campaign=nna9W&embed_video_only=0&disable_sound=0&tour=9oGW&room=allisonpalmer"
+q.setAttribute('placeholder',room)
 }); 
 
 
@@ -27,7 +27,7 @@ q.setAttribute('placeholder',params.get('room'))
 btn.addEventListener("click",(e)=>{
   e.preventDefault()
 let value=q.value.trim().toLowerCase()
-window.location.href = "https://alexmercer0.github.io/chat/?room=" + value
+window.location.href = "https://alexmercer0.github.io/chat/" + value
 })
 
 
